--- a/.github/workflows/function-build-deploy.yml
+++ b/.github/workflows/function-build-deploy.yml
@@ -19,17 +19,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2         
     
-    - name: 'Set up Python ${{ env.PYTHON_VERSION }}'
-      uses: actions/setup-python@v2
-      with:
-        python-version: '${{ env.PYTHON_VERSION }}'
+#     - name: 'Set up Python ${{ env.PYTHON_VERSION }}'
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '${{ env.PYTHON_VERSION }}'
         
-    - name: Install dependencies
-      run: |
-         pushd './${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
-         python -m pip install --upgrade pip
-         pip install -r requirements.txt --target=".python_packages/lib/site-packages"
-         popd
+#     - name: Install dependencies
+#       run: |
+#          pushd './${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+#          popd
            
     - uses: azure/login@v1
       with:
@@ -42,8 +42,8 @@ jobs:
       with:
         app-name: ${{ vars.AZURE_FUNCTION_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}      
-#         scm-do-build-during-deployment: true
-#         enable-oryx-build: true         
+        scm-do-build-during-deployment: true
+        enable-oryx-build: true         
       
     - name: logout
       run: |
